feat: add Jekyll site for legal history book
Add new Jekyll site structure including configuration, layouts, navigation, and initial content for "法律趣史：30个改变世界的法律故事". Includes updated .gitignore, Gemfile, _config.yml, default layout with dark mode, navigation include, and index page with chapter listings.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Jekyll
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# Ruby/Bundler
+.bundle/
+vendor/
+Gemfile.lock
+
+# Temporary files (created during scripts)
+*_front_matter.sh
+*_nav.sh
+temp_file
