chore(config): configure Jekyll site URLs
Set the site URL to https://lextric.github.io and baseurl to /30-important-law-story to enable proper deployment on GitHub Pages for the legal history book site.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 法律趣史：30个改变世界的法律故事
 description: 一本写给法律小白的趣味历史书，用最简单有趣的方式讲述改变世界的法律故事
-url: ""
-baseurl: ""
+url: "https://lextric.github.io"
+baseurl: "/30-important-law-story"
 markdown: kramdown
 highlighter: rouge
 permalink: /:title/
